feat(security): Configure global CORS in Spring Security
Resolves persistent CORS preflight errors by integrating CORS configuration directly into the Spring Security filter chain using a 'CorsConfigurationSource' bean.

This ensures that preflight OPTIONS requests from the frontend are correctly handled before security rules are applied.

Refactored the configuration by removing the 'WebMvcConfigurer' implementation from 'RestRepositoryConfig' to centralize CORS settings and eliminate conflicts.